latest working scaffold application

--- a/src/main/webapp/partials/DiscountVoucher/detail.html
+++ b/src/main/webapp/partials/DiscountVoucher/detail.html
@@ -6,7 +6,7 @@
     <div class="control-group">
         <label for="voucherCode" class="control-label">VoucherCode</label>
         <div class="controls">
-            <input id="voucherCode" name="voucherCode" type="text"  ng-model="discountvoucher.voucherCode" placeholder="Enter the DiscountVoucher voucherCode"></input>
+            <input id="voucherCode" name="voucherCode" type="text"  ng-model="discountVoucher.voucherCode" placeholder="Enter the DiscountVoucher voucherCode"></input>
         </div>
     </div>
     <div class="control-group">
