--- a/src/main/webapp/partials/Customer/search.html
+++ b/src/main/webapp/partials/Customer/search.html
@@ -1,25 +1,8 @@
-<h2>Search for Customers</h2>
+<h2>Customers List</h2>
 <form id="CustomerSearch" class="form-horizontal">
     <div class="control-group">
-    </div>
-    <div class="control-group">
-    </div>
-    <div class="control-group">
-        <label for="firstName" class="control-label">FirstName</label>
         <div class="controls">
-            <input id="firstName" name="firstName" type="text" ng-model="search.firstName" placeholder="Enter the Customer firstName"></input>
-        </div>
-    </div>
-    <div class="control-group">
-        <label for="dateOfBirth" class="control-label">DateOfBirth</label>
-        <div class="controls">
-            <input id="dateOfBirth" name="dateOfBirth" type="text" ng-model="search.dateOfBirth" placeholder="Enter the Customer dateOfBirth"></input>
-        </div>
-    </div>
-    <div class="control-group">
-        <div class="controls">
-            <a id="Search" name="Search" class="btn btn-primary" ng-click="performSearch()"><i class="icon-search icon-white"></i> Search</a>
-            <a id="Create" name="Create" class="btn" href="#/Customers/new"><i class="icon-plus-sign"></i> Create New</a>
+           <a id="Create" name="Create" class="btn" href="#/Customers/new"><i class="icon-plus-sign"></i> Create New Customer</a>
         </div>
     </div>
 </form>
@@ -32,7 +15,7 @@
             </tr>
         </thead>
         <tbody id="search-results-body">
-            <tr ng-repeat="result in searchResults">
+            <tr ng-repeat="result in searchResults | filter:filterSearchResults | startFrom:currentPage*pageSize | limitTo:pageSize">
                 <td><a href="#/Customers/edit/{{result.id}}">{{result.firstName}}</a></td>
                 <td><a href="#/Customers/edit/{{result.id}}">{{result.dateOfBirth}}</a></td>
             </tr>
