--- a/src/main/webapp/partials/DiscountVoucher/search.html
+++ b/src/main/webapp/partials/DiscountVoucher/search.html
@@ -1,19 +1,8 @@
-<h2>Search for DiscountVouchers</h2>
+<h2>DiscountVouchers List</h2>
 <form id="DiscountVoucherSearch" class="form-horizontal">
     <div class="control-group">
-    </div>
-    <div class="control-group">
-    </div>
-    <div class="control-group">
-        <label for="voucherCode" class="control-label">VoucherCode</label>
         <div class="controls">
-            <input id="voucherCode" name="voucherCode" type="text" ng-model="search.voucherCode" placeholder="Enter the DiscountVoucher voucherCode"></input>
-        </div>
-    </div>
-    <div class="control-group">
-        <div class="controls">
-            <a id="Search" name="Search" class="btn btn-primary" ng-click="performSearch()"><i class="icon-search icon-white"></i> Search</a>
-            <a id="Create" name="Create" class="btn" href="#/DiscountVouchers/new"><i class="icon-plus-sign"></i> Create New</a>
+           <a id="Create" name="Create" class="btn" href="#/DiscountVouchers/new"><i class="icon-plus-sign"></i> Create New DiscountVoucher</a>
         </div>
     </div>
 </form>
